--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-typeorm-postgres",
+  "name": "microservice-p2b-stats",
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "Unlicense",
@@ -21,11 +21,15 @@
     "fast-json-parser": "^1.0.4",
     "fast-json-stable-stringify": "^2.1.0",
     "mongoose": "^5.10.7",
+    "nodemon": "^2.0.5",
+    "ts-node": "^9.0.0",
     "winston": "^3.3.3"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "npm run build && node dist/index.js",
-    "test": "jest"
+    "build": "tsc --skipLibCheck",
+    "start": "NODE_ENV=production npm run build && node ./dist/index.js",
+    "start:local": "NODE_ENV=development npm run build && node ./dist/index.js",
+    "dev": "NODE_ENV=development nodemon > dev.log",
+    "test": "NODE_ENV=development mocha -r ts-node/register test/index.js --exit"
   }
 }
