--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
+SERVER_PORT=3002
+
 RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER=guest
 RABBIT_PASS=guest
 RABBIT_VHOST=/
 HEARTBEAT=60
-
-POSTGRES_HOST=localhost
-POSTGRES_PORT=15432
-POSTGRES_USERNAME=processor
-POSTGRES_PASSWORD=Postgres2019!
-POSTGRES_DATABASE=processor
