--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^7.10.0",
     "jest": "^26.5.2",
     "ts-jest": "^26.4.1",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
   },
   "scripts": {
     "build": "tsc --skipLibCheck",
+    "dev:server": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "NODE_ENV=production npm run build && node ./dist/index.js",
     "start:local": "NODE_ENV=development npm run build && node ./dist/index.js",
     "dev": "NODE_ENV=development nodemon > dev.log",
